# AutoEmailSender

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  RTK.md  app.py  pyproject.toml
backend/: .env.example  __init__.py  alembic.ini  config.py  database.py  desktop_entry.py  dev_entry.py  document_service.py  email_service.py  import_service.py  main.py  pyproject.toml  user_service.py
backend/alembic/: env.py
backend/alembic/versions/: 04d66ff4c25b_create_core_tables.py  1b8c2f4d9e6a_drop_identity_signature.py  2f6a9d8c1e20_add_identity_profile_and_sender_names.py  5e8a1c2d9b34_add_crawl_job_entry_type.py  (+37 more)
backend/app/: __init__.py
backend/models/: user_file.py  user_profile.py
backend/test/: migrated_database.py  test_api_endpoints.py  test_api_import_boundaries.py  test_backend_build_script.py  test_batch_draft_generation_runtime.py  test_batch_schedule.py  test_batch_task_dispatch_schedule.py  test_concurrency_guards.py  test_config.py  test_crawl_job_approval.py  test_crawl_job_events.py  test_crawl_job_metrics.py  test_crawl_job_models.py  test_crawl_job_partial_completed_migration.py  test_crawl_job_runs.py  test_crawl_job_runtime.py  test_crawl_jobs_api.py  test_crawler_chunk_runtime.py  test_crawler_chunking.py  test_crawler_tools.py  test_dashboard_stats.py  test_database_schema.py  test_desktop_runtime.py  test_diagnostics_api.py  test_faculty_crawler_agent.py  test_file_storage.py  test_imap_message_fetcher.py  test_imap_sync_models.py  test_imap_sync_runtime.py  test_llm_rich_draft.py  test_llm_runtime.py  test_mail_runtime.py  test_match_analysis_jobs.py  test_match_analysis_runtime.py  test_matching_service.py  test_migrated_database.py  test_operation_log_integration.py  test_operation_logs.py  test_outreach_templates.py  test_professor_field_normalization.py  (+15 more)
backend/utils/: timezone_utils.py
(+523 files in other folders)
