[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "beautifulsoup4>=4.14.3",
    "browser-use>=0.11.13",
    "cloudscraper>=1.2.71",
    "crawl4ai>=0.8.6",
    "deepagents>=0.5.3",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "langchain-core>=1.2.23",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "mammoth>=1.12.0",
    "markdownify>=1.2.2",
    "markitdown>=0.1.5",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.42.0",
]
